<resources>
    <string name="app_name">getCellInfos</string>
    <string name="startString">start</string>
    <string name="endString">end</string>
    <string name="showString">show</string>
    <string name="setting_string">setting</string>
    <string name="default_string">default</string>
    <string name="export_string">export</string>
    <string name="realtime_update_korean">실시간 업데이트</string>
    <string name="realtim_log_korean">실시간 로그</string>
    <string name="enter_string">enter</string>
    <string name="clear_string">clear</string>
    <string name="location_korean">위치</string>
    <string name="rsrp_text">RSRP</string>
    <string name="rsrq_text">RSRQ</string>
    <string name="rssi_string">RSSI</string>
    <string name="rssnr_string">RSSNR</string>
    <string name="pci_string">PCI</string>
    <string name="earfcn_string">EARFCN</string>
    <string name="neighbor_cell_text">Neighbor Cell</string>
    <string name="wifi_list_string">wifi List</string>
    <string name="indoor_string_korean">실내</string>
    <string name="outdoor_string_korean">실외</string>
    <string name="satellite_string">Satellite</string>
    <string name="sensors_string">Sensors</string>
    <string name="light_string">Light</string>
</resources>